apps/online-boutique/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - grafana.k8saas.gcp.cloud.ccl-consulting.fr
      secretName: tls-grafana
  rules:
    - host: "grafana.k8saas.gcp.cloud.ccl-consulting.fr"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  name: http
